--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0"
   },
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "typescript": "^5.4.3"
   }
 }
